...

                ref.read(selectedProvider.notifier).state = selected;
                ref.read(groupByProvider.notifier).state = groupBy;

                buildAction();
              },
              child: const Text('Generate Plots'),
            ),
            MarkdownTooltip(
              message: '''

              **Variable**

...
